[gd_scene load_steps=5 format=3 uid="uid://cuwarexvd18cn"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_tbp2r"]
[ext_resource type="PackedScene" uid="uid://dg2t78yjsws0" path="res://Scenes/toaster_player.tscn" id="1_w1x7m"]
[ext_resource type="Texture2D" uid="uid://c8tu35vglt0nf" path="res://art/Cutscenes/white.png" id="2_xqu87"]
[ext_resource type="PackedScene" uid="uid://dhtjr1tp1kmc5" path="res://Scenes/load_dialogue.tscn" id="3_iccjm"]

[node name="Game" type="Node2D"]
script = ExtResource("1_tbp2r")

[node name="bg" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_xqu87")

[node name="ToasterPlayer" parent="." instance=ExtResource("1_w1x7m")]
position = Vector2(516, 273)

[node name="LoadDialogue" parent="." instance=ExtResource("3_iccjm")]

[connection signal="dialogue_sequence_finished" from="LoadDialogue" to="." method="_on_load_dialogue_dialogue_sequence_finished"]
